updates to explore page

--- a/contact.html
+++ b/contact.html
@@ -171,7 +171,8 @@
               type="text"
               id="name"
               class="form"
-              placeholder="Fistname Lastname"
+              placeholder="Firstname Lastname"
+              required="required"
             />
           </form>
           <form action="login.php" method="GET">
@@ -206,7 +207,14 @@
 
           <form action="">
             <label for="text">Message</label>
-            <textarea name="" id="text" cols="30" rows="10" class="form">
+            <textarea
+              name=""
+              id="text"
+              cols="30"
+              rows="10"
+              class="form"
+              required="required"
+            >
 Write your message...</textarea
             >
           </form>
