--- a/explore.html
+++ b/explore.html
@@ -159,8 +159,8 @@
     <main>
       <div class="main-wrapper">
         <h1>More To Explore</h1>
-        <section class="for-kids">
-          <div class="margins">
+        <section class="kids">
+          <div class="blue margins" id="item-1">
             <h2>For Kids</h2>
             <p id="intro">
               Are you a young person looking to learn more about science? Come
@@ -169,13 +169,13 @@
             <p>
               You can learn about Newtonian physics from our bumper swing, or
               why not travel back in time and meet our resident Woolly Mammoth?
+            </p>
+            <p>
               Our exhibits are designed to be accessible for interested minds,
               so make sure you come ready to learn and explore.
             </p>
           </div>
-        </section>
-        <section class="clubs">
-          <div class="margins">
+          <div class="margins" id="item-2">
             <h4>Join a Childrens Club</h4>
             <h5>Young Stars Club</h5>
             <p>
@@ -194,17 +194,17 @@
               and how you can join, send us a message.
             </p>
           </div>
+          <figure class="margins" id="item-3">
+            <!-- <img src="images\kids-cartoon.jpg" alt="" /> -->
+          </figure>
         </section>
-        <div class="margins">
-          <figure><img src="images\kids-cartoon.jpg" alt="" /></figure>
-          <div class="get-in-touch">
-            <p>Want to join one of our clubs?</p>
-            <a href=""><p class="button">GET IN TOUCH</p></a>
-          </div>
+        <div class="margins get-in-touch">
+          <p>Want to join one of our clubs?</p>
+          <a href="contact.html"><p class="button">GET IN TOUCH</p></a>
         </div>
 
         <section class="teachers">
-          <div class="margins">
+          <div class="margins" id="item-4">
             <h3>For Teachers</h3>
             <p>
               As a community-driven museum, we want to work with schools to
@@ -221,9 +221,7 @@
               for a visit.
             </p>
           </div>
-        </section>
-        <section class="researcers">
-          <div class="margins">
+          <div class="margins" id="item-5">
             <h3>For Researchers</h3>
             <p>
               Are you looking to get involved with our team of researchers and
@@ -236,13 +234,13 @@
               the country.
             </p>
           </div>
+          <figure class="margins" id="item-6">
+            <!-- <img src="images\researcher-cartoon_large.jpg" alt="" /> -->
+          </figure>
         </section>
-        <div class="margins">
-          <figure><img src="images\researcher-cartoon.jpg" alt="" /></figure>
-          <div class="get-in-touch">
-            <p>Are you a Teacher or a Resercher?</p>
-            <a href=""><p class="button">GET IN TOUCH</p></a>
-          </div>
+        <div class="margins get-in-touch">
+          <p>Are you a Teacher or a Resercher?</p>
+          <a href="contact.html"><p class="button">GET IN TOUCH</p></a>
         </div>
       </div>
 
