--- a/index.html
+++ b/index.html
@@ -162,11 +162,8 @@
           <section class="main-content">
             <hgroup>
               <h1>EXPLORE 1000+ EXHIBITIONS</h1>
-              <h2>
-                entrance is <br />
-                <em>FREE FOR ALL</em>
-              </h2>
-              <h2><em>GUIDED TOUR</em> <br />starting every hour</h2>
+              <h2>entrance is <em>FREE FOR ALL</em></h2>
+              <h2><em>GUIDED TOUR</em> every hour</h2>
             </hgroup>
             <div class="button">
               <a href="www.ticketmaster.com">
