--- a/index.html
+++ b/index.html
@@ -51,11 +51,16 @@
           <input type="checkbox" id="ticket-box" />
           <div class="ticket-dropdown">
             <p class="ticket-header">BUY TICKET</p>
-            <form action="">
-              <p class="dropdown-text">
-                Please Choose the Desired Number of Tickets and Click Proceed
-              </p>
-              <label for="select">6 or more people</label>
+            <p class="dropdown-text">
+              Please Choose the Desired Number of Tickets and Click Proceed in
+              order to finalize your purchase on www.ticketmaster.com
+            </p>
+            <p class="dropdown-text">
+              If your party consist of 6 people or more, you will be taken to
+              our contact form.
+            </p>
+            <form action="" class="ticket">
+              <label for="select">Tickets</label>
               <select name="tickets" id="select">
                 <option value="1">1</option>
                 <option value="1">2</option>
@@ -165,18 +170,19 @@
               <h2>entrance is <em>FREE FOR ALL</em></h2>
               <h2><em>GUIDED TOUR</em> every hour</h2>
             </hgroup>
+            <div class="clock">
+              <span class="fa fa-clock"></span>
+              <p>OPEN TODAY UNTIL 16:00</p>
+            </div>
             <div class="button">
               <a href="www.ticketmaster.com">
                 <p class="button">BUY TICKETS</p></a
               >
             </div>
-            <div class="clock">
-              <span class="fa fa-clock"></span>
-              <p>OPEN TODAY UNTIL 16:00</p>
-            </div>
           </section>
           <aside>
             <div class="bubble">
+              <div class="arrow-up"></div>
               <a href="about_us.html">
                 <h3>"Let us Explore Together"</h3>
                 <div>
