--- a/explore.html
+++ b/explore.html
@@ -51,11 +51,16 @@
           <input type="checkbox" id="ticket-box" />
           <div class="ticket-dropdown">
             <p class="ticket-header">BUY TICKET</p>
-            <form action="">
-              <p class="dropdown-text">
-                Please Choose the Desired Number of Tickets and Click Proceed
-              </p>
-              <label for="select">6 or more people</label>
+            <p class="dropdown-text">
+              Please Choose the Desired Number of Tickets and Click Proceed in
+              order to finalize your purchase on www.ticketmaster.com
+            </p>
+            <p class="dropdown-text">
+              If your party consist of 6 people or more, you will be taken to
+              our contact form.
+            </p>
+            <form action="" class="ticket">
+              <label for="select">Tickets</label>
               <select name="tickets" id="select">
                 <option value="1">1</option>
                 <option value="1">2</option>
@@ -114,44 +119,56 @@
         </ul>
         <ul class="large-screen">
           <li>
-            <a href="exhibitions.html">EXHIBITIONS</a>
+            <a href="exhibitions.html" class="purple-box inactive"
+              >EXHIBITIONS</a
+            >
+            <div class="dropdown-info">
+              <p class="header">Our Exhibition Spaces Include:</p>
+              <p>
+                Cosmology, Evolution, Biology & Medicine, Robotics & AI and
+                Ecology
+              </p>
+              <p>Learn More...</p>
+            </div>
           </li>
 
-          <!-- <ul class="dropdown">
-            <p>Our Exhibition Spaces Include:</p>
-            <li>Cosmology</li>
-            <li>Evolution</li>
-            <li>Biology & Medicine</li>
-            <li>Robotics & AI</li>
-            <li>Ecology</li>
-          </ul> -->
-          <li><a href="explore.html">EXPLORE</a></li>
-          <!-- <ul class="dropdown">
-            <p>Learn more about what have on offer, wheter you are a:</p>
-            <li>Kid</li>
-            <li>Parent</li>
-            <li>Teacher</li>
-            <li>Researcher</li>
-          </ul> -->
           <li>
-            <a href="get_involved.html">GET INVOLVED</a>
+            <a href="explore.html" class="purple-box">EXPLORE</a>
+            <div class="dropdown-info">
+              <p class="header">Our Exhibition Spaces Include:</p>
+              <p>
+                Cosmology, Evolution, Biology & Medicine, Robotics & AI and
+                Ecology
+              </p>
+              <p>Learn More...</p>
+            </div>
           </li>
-          <!-- <ul class="dropdown">
-            <p>Do you want to support the museum?:</p>
-            <li>Donations</li>
-            <li>Volunteering</li>
-            <li>Internships</li>
-          </ul> -->
-          <li><a href="visit.html">VISIT</a></li>
-          <!-- <ul class="dropdown">
-            <p>Information about:</p>
-            <li>Admission</li>
-            <li>Location</li>
-            <li>Hours</li>
-            <li>Accessibility</li>
-            <li>Food and Drink</li>
-            <li>Shop</li>
-          </ul> -->
+
+          <li>
+            <a href="get_involved.html" class="purple-box inactive"
+              >GET INVOLVED</a
+            >
+            <div class="dropdown-info">
+              <p class="header">Our Exhibition Spaces Include:</p>
+              <p>
+                Cosmology, Evolution, Biology & Medicine, Robotics & AI and
+                Ecology
+              </p>
+              <p>Learn More...</p>
+            </div>
+          </li>
+
+          <li>
+            <a href="visit.html" class="purple-box inactive">VISIT</a>
+            <div class="dropdown-info">
+              <p class="header">Our Exhibition Spaces Include:</p>
+              <p>
+                Cosmology, Evolution, Biology & Medicine, Robotics & AI and
+                Ecology
+              </p>
+              <p>Learn More...</p>
+            </div>
+          </li>
         </ul>
       </nav>
     </header>
