--- a/get_involved.html
+++ b/get_involved.html
@@ -135,7 +135,7 @@
           </li>
 
           <li>
-            <a href="explore.html" class="purple-box">EXPLORE</a>
+            <a href="explore.html" class="purple-box inactive">EXPLORE</a>
             <div class="dropdown-info">
               <p class="header">Our Exhibition Spaces Include:</p>
               <p>
@@ -147,7 +147,7 @@
           </li>
 
           <li>
-            <a href="get_involved.html" class="purple-box inactive"
+            <a href="get_involved.html" class="purple-box"
               >GET INVOLVED</a
             >
             <div class="dropdown-info">
@@ -177,7 +177,8 @@
 
     <main>
       <div class="main-wrapper">
-        <h1>Get involved</h1>
+        <h1 class="mobile">Get involved</h1>
+        <h1 class="large-screen">You can support our museum in various ways</h1>
         <section class="main-content">
           <div class="support">
             <h2>Donations</h2>
@@ -222,7 +223,7 @@
           </div>
         </section>
         <div class="get-in-touch">
-          <p>Do you want to help out? please get in touch</p>
+          <p>Do you want to help us out? please get in touch</p>
           <a href=""><p class="button">GET IN TOUCH</p></a>
         </div>
 
