--- a/explore.html
+++ b/explore.html
@@ -175,7 +175,8 @@
 
     <main>
       <div class="main-wrapper">
-        <h1>More To Explore</h1>
+        <h1 class="mobile">Explore</h1>
+        <h1 class="large-screen">More To Explore</h1>
         <section class="kids">
           <div class="blue margins" id="item-1">
             <h2>For Kids</h2>
