--- a/visit.html
+++ b/visit.html
@@ -51,11 +51,16 @@
           <input type="checkbox" id="ticket-box" />
           <div class="ticket-dropdown">
             <p class="ticket-header">BUY TICKET</p>
-            <form action="">
-              <p class="dropdown-text">
-                Please Choose the Desired Number of Tickets and Click Proceed
-              </p>
-              <label for="select">6 or more people</label>
+            <p class="dropdown-text">
+              Please Choose the Desired Number of Tickets and Click Proceed in
+              order to finalize your purchase on www.ticketmaster.com
+            </p>
+            <p class="dropdown-text">
+              If your party consist of 6 people or more, you will be taken to
+              our contact form.
+            </p>
+            <form action="" class="ticket">
+              <label for="select">Tickets</label>
               <select name="tickets" id="select">
                 <option value="1">1</option>
                 <option value="1">2</option>
@@ -114,51 +119,64 @@
         </ul>
         <ul class="large-screen">
           <li>
-            <a href="exhibitions.html">EXHIBITIONS</a>
+            <a href="exhibitions.html" class="purple-box inactive"
+              >EXHIBITIONS</a
+            >
+            <div class="dropdown-info">
+              <p class="header">Our Exhibition Spaces Include:</p>
+              <p>
+                Cosmology, Evolution, Biology & Medicine, Robotics & AI and
+                Ecology
+              </p>
+              <p>Learn More...</p>
+            </div>
           </li>
 
-          <!-- <ul class="dropdown">
-            <p>Our Exhibition Spaces Include:</p>
-            <li>Cosmology</li>
-            <li>Evolution</li>
-            <li>Biology & Medicine</li>
-            <li>Robotics & AI</li>
-            <li>Ecology</li>
-          </ul> -->
-          <li><a href="explore.html">EXPLORE</a></li>
-          <!-- <ul class="dropdown">
-            <p>Learn more about what have on offer, wheter you are a:</p>
-            <li>Kid</li>
-            <li>Parent</li>
-            <li>Teacher</li>
-            <li>Researcher</li>
-          </ul> -->
           <li>
-            <a href="get_involved.html">GET INVOLVED</a>
+            <a href="explore.html" class="purple-box inactive">EXPLORE</a>
+            <div class="dropdown-info">
+              <p class="header">Our Exhibition Spaces Include:</p>
+              <p>
+                Cosmology, Evolution, Biology & Medicine, Robotics & AI and
+                Ecology
+              </p>
+              <p>Learn More...</p>
+            </div>
           </li>
-          <!-- <ul class="dropdown">
-            <p>Do you want to support the museum?:</p>
-            <li>Donations</li>
-            <li>Volunteering</li>
-            <li>Internships</li>
-          </ul> -->
-          <li><a href="visit.html">VISIT</a></li>
-          <!-- <ul class="dropdown">
-            <p>Information about:</p>
-            <li>Admission</li>
-            <li>Location</li>
-            <li>Hours</li>
-            <li>Accessibility</li>
-            <li>Food and Drink</li>
-            <li>Shop</li>
-          </ul> -->
+
+          <li>
+            <a href="get_involved.html" class="purple-box inactive"
+              >GET INVOLVED</a
+            >
+            <div class="dropdown-info">
+              <p class="header">Our Exhibition Spaces Include:</p>
+              <p>
+                Cosmology, Evolution, Biology & Medicine, Robotics & AI and
+                Ecology
+              </p>
+              <p>Learn More...</p>
+            </div>
+          </li>
+
+          <li>
+            <a href="visit.html" class="purple-box">VISIT</a>
+            <div class="dropdown-info">
+              <p class="header">Our Exhibition Spaces Include:</p>
+              <p>
+                Cosmology, Evolution, Biology & Medicine, Robotics & AI and
+                Ecology
+              </p>
+              <p>Learn More...</p>
+            </div>
+          </li>
         </ul>
       </nav>
     </header>
 
     <main>
       <div class="main-wrapper">
-        <h1>Visit</h1>
+        <h1 class="mobile">Visit</h1>
+        <h1 class="large-screen">You will find us right in the center of Bergen</h1>
         <section class="info">
           <div class="info">
             <h2>Admission</h2>
@@ -186,7 +204,7 @@
               title="address to Community Science Museum "
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1971.6798987692655!2d5.331311116446823!3d60.384447582040345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x463cfeacef54f159%3A0x62678fec8f2c1061!2sNyg%C3%A5rdsgaten%20112%2C%205008%20Bergen!5e0!3m2!1sen!2sno!4v1606574333874!5m2!1sen!2sno"
               width="200"
-              height="450"
+              height="325"
               allowfullscreen=""
             ></iframe>
           </div>
@@ -215,10 +233,10 @@
           </div>
         </section>
         <section class="facilities">
-          <figure class="facilities">
+          <figure class="facilities item-1">
             <img src="../images/handicap.jpg" alt="" />
           </figure>
-          <div id="accessibility" class="facilities">
+          <div id="accessibility" class="facilities item-2">
             <h3>Accessibility</h3>
             <p>The museum has wheelchair accessibility ramps.</p>
             <p>
@@ -226,20 +244,20 @@
               visually impaired.
             </p>
           </div>
-          <figure class="facilities">
+          <figure class="facilities item-3">
             <img src="images\cafe.jpg" alt="" />
           </figure>
-          <div id="food-drink" class="facilities">
+          <div id="food-drink" class="facilities item-4">
             <h3>Food and Drink</h3>
             <p>
               There is a café attached to the museum where you can get light
               lunches, soft drinks, coffee, snacks and more.
             </p>
           </div>
-          <figure class="facilities">
+          <figure class="facilities item-5">
             <img src="images\shop.jpg" alt="" />
           </figure>
-          <div id="shop" class="facilities">
+          <div id="shop" class="facilities item-6">
             <h3>Shop</h3>
             <p>
               Our shop offers a range of memorabilia from the museum as well as
@@ -272,78 +290,77 @@
             </section>
           </div>
         </div>
-      </div>
-    </main>
-
-    <footer>
-      <div class="footer-wrapper">
-        <div class="footer-container">
-          <h6>CONNECT:</h6>
-          <ul class="connect">
-            <li>
-              <a href="www.facebook.com"
-                ><span class="fa fa-facebook-f"></span
-              ></a>
-            </li>
-            <li>
-              <a href="www.instagram.com"
-                ><span class="fa fa-instagram"></span
-              ></a>
-            </li>
-            <li>
-              <a href="www.youtube.com"><span class="fa fa-youtube"></span></a>
-            </li>
-            <li>
-              <a href="www.twitter.com"><span class="fa fa-twitter"></span></a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer-container">
-          <h6>HOURS:</h6>
-          <div class="hours-wrapper">
-            <ul class="hours">
-              <li>Monday:</li>
-              <li>Tuesday:</li>
-              <li>Wednesday:</li>
-              <li>Thursday:</li>
-              <li>Friday:</li>
-              <li>Saturday:</li>
-              <li>Sunday:</li>
+      </main>
+  
+      <footer>
+        <div class="footer-wrapper">
+          <div class="footer-container">
+            <h6>CONNECT:</h6>
+            <ul class="connect">
+              <li>
+                <a href="www.facebook.com"
+                  ><span class="fa fa-facebook-f"></span
+                ></a>
+              </li>
+              <li>
+                <a href="www.instagram.com"
+                  ><span class="fa fa-instagram"></span
+                ></a>
+              </li>
+              <li>
+                <a href="www.youtube.com"><span class="fa fa-youtube"></span></a>
+              </li>
+              <li>
+                <a href="www.twitter.com"><span class="fa fa-twitter"></span></a>
+              </li>
             </ul>
-            <ul>
-              <li>Closed</li>
-              <li>10:00 - 16:00</li>
-              <li>10:00 - 16:00</li>
-              <li>10:00 - 16:00</li>
-              <li>10:00 - 19:00</li>
-              <li>09:00 - 16:00</li>
-              <li>09:00 - 13:00</li>
+          </div>
+          <div class="footer-container">
+            <h6>HOURS:</h6>
+            <div class="hours-wrapper">
+              <ul class="hours">
+                <li>Monday:</li>
+                <li>Tuesday:</li>
+                <li>Wednesday:</li>
+                <li>Thursday:</li>
+                <li>Friday:</li>
+                <li>Saturday:</li>
+                <li>Sunday:</li>
+              </ul>
+              <ul>
+                <li>Closed</li>
+                <li>10:00 - 16:00</li>
+                <li>10:00 - 16:00</li>
+                <li>10:00 - 16:00</li>
+                <li>10:00 - 19:00</li>
+                <li>09:00 - 16:00</li>
+                <li>09:00 - 13:00</li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer-container">
+            <div>
+              <h6>LOCATION:</h6>
+              <p>Nygårdsgaten 112</p>
+              <p>5008 Bergen, Norway</p>
+            </div>
+            <a href="visit.html" class="location"
+              ><span class="fa fa-map-marker-alt"></span>
+              <p>Getting Here</p></a
+            >
+          </div>
+          <div class="footer-container">
+            <h6>CONTACT & SUPPORT:</h6>
+            <ul class="contact">
+              <li><a href="about_us.html">About Us</a></li>
+              <li><a href="visit.html">Facilities</a></li>
+              <li><a href="contact.html">Contact & FAQ</a></li>
+              <li><p>Email: contact@cms.com</p></li>
+              <li><p>Phone: 500 55 555</p></li>
             </ul>
           </div>
         </div>
-        <div class="footer-container">
-          <div>
-            <h6>LOCATION:</h6>
-            <p>Nygårdsgaten 112</p>
-            <p>5008 Bergen, Norway</p>
-          </div>
-          <a href="visit.html" class="location"
-            ><span class="fa fa-map-marker-alt"></span>
-            <p>Getting Here</p></a
-          >
-        </div>
-        <div class="footer-container">
-          <h6>CONTACT & SUPPORT:</h6>
-          <ul class="contact">
-            <li><a href="about_us.html">About Us</a></li>
-            <li><a href="visit.html">Facilities</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><p>Email: contact@cms.com</p></li>
-            <li><p>Phone: 500 55 555</p></li>
-          </ul>
-        </div>
-      </div>
-      <p id="copyright">Community Science Museum 2020</p>
-    </footer>
+        <p id="copyright">Community Science Museum 2020</p>
+      </footer>
   </body>
 </html>
