--- a/about_us.html
+++ b/about_us.html
@@ -51,11 +51,16 @@
           <input type="checkbox" id="ticket-box" />
           <div class="ticket-dropdown">
             <p class="ticket-header">BUY TICKET</p>
-            <form action="">
-              <p class="dropdown-text">
-                Please Choose the Desired Number of Tickets and Click Proceed
-              </p>
-              <label for="select">6 or more people</label>
+            <p class="dropdown-text">
+              Please Choose the Desired Number of Tickets and Click Proceed in
+              order to finalize your purchase on www.ticketmaster.com
+            </p>
+            <p class="dropdown-text">
+              If your party consist of 6 people or more, you will be taken to
+              our contact form.
+            </p>
+            <form action="" class="ticket">
+              <label for="select">Tickets</label>
               <select name="tickets" id="select">
                 <option value="1">1</option>
                 <option value="1">2</option>
@@ -114,44 +119,56 @@
         </ul>
         <ul class="large-screen">
           <li>
-            <a href="exhibitions.html">EXHIBITIONS</a>
+            <a href="exhibitions.html" class="purple-box inactive"
+              >EXHIBITIONS</a
+            >
+            <div class="dropdown-info">
+              <p class="header">Our Exhibition Spaces Include:</p>
+              <p>
+                Cosmology, Evolution, Biology & Medicine, Robotics & AI and
+                Ecology
+              </p>
+              <p>Learn More...</p>
+            </div>
           </li>
 
-          <!-- <ul class="dropdown">
-            <p>Our Exhibition Spaces Include:</p>
-            <li>Cosmology</li>
-            <li>Evolution</li>
-            <li>Biology & Medicine</li>
-            <li>Robotics & AI</li>
-            <li>Ecology</li>
-          </ul> -->
-          <li><a href="explore.html">EXPLORE</a></li>
-          <!-- <ul class="dropdown">
-            <p>Learn more about what have on offer, wheter you are a:</p>
-            <li>Kid</li>
-            <li>Parent</li>
-            <li>Teacher</li>
-            <li>Researcher</li>
-          </ul> -->
           <li>
-            <a href="get_involved.html">GET INVOLVED</a>
+            <a href="explore.html" class="purple-box inactive">EXPLORE</a>
+            <div class="dropdown-info">
+              <p class="header">Our Exhibition Spaces Include:</p>
+              <p>
+                Cosmology, Evolution, Biology & Medicine, Robotics & AI and
+                Ecology
+              </p>
+              <p>Learn More...</p>
+            </div>
           </li>
-          <!-- <ul class="dropdown">
-            <p>Do you want to support the museum?:</p>
-            <li>Donations</li>
-            <li>Volunteering</li>
-            <li>Internships</li>
-          </ul> -->
-          <li><a href="visit.html">VISIT</a></li>
-          <!-- <ul class="dropdown">
-            <p>Information about:</p>
-            <li>Admission</li>
-            <li>Location</li>
-            <li>Hours</li>
-            <li>Accessibility</li>
-            <li>Food and Drink</li>
-            <li>Shop</li>
-          </ul> -->
+
+          <li>
+            <a href="get_involved.html" class="purple-box inactive" 
+              >GET INVOLVED</a
+            >
+            <div class="dropdown-info">
+              <p class="header">Our Exhibition Spaces Include:</p>
+              <p>
+                Cosmology, Evolution, Biology & Medicine, Robotics & AI and
+                Ecology
+              </p>
+              <p>Learn More...</p>
+            </div>
+          </li>
+
+          <li>
+            <a href="visit.html" class="purple-box inactive">VISIT</a>
+            <div class="dropdown-info">
+              <p class="header">Our Exhibition Spaces Include:</p>
+              <p>
+                Cosmology, Evolution, Biology & Medicine, Robotics & AI and
+                Ecology
+              </p>
+              <p>Learn More...</p>
+            </div>
+          </li>
         </ul>
       </nav>
     </header>
@@ -160,16 +177,16 @@
       <div class="main-wrapper">
         <h1>"let us explore together"</h1>
         <section class="vision">
-          <div class="vision blue">
+          <div class="vision item-1">
             <p>
               "Come join us at the Community Science Museum where we’re
               committed to making science accessible to all"
             </p>
           </div>
-          <figure class="vision">
+          <div class="image item-2">
             <img src="images\together.jpg" alt="" />
-          </figure>
-          <div class="vision">
+          </div>
+          <div class="vision item-3">
             <h5>Science should be Fun</h5>
             <p>
               We believe science should not be confined to the textbook, but
@@ -184,7 +201,7 @@
               home).
             </p>
           </div>
-          <div class="vision">
+          <div class="vision item-4">
             <h5>History of Science</h5>
             <p>
               Over the course of human history, science has developed from our
@@ -193,7 +210,7 @@
               life itself.
             </p>
           </div>
-          <div class="vision">
+          <div class="vision item-5">
             <h5>Our Vision</h5>
             <p>
               The aim of our museum is to create a space where everyone can
@@ -202,13 +219,14 @@
               us.
             </p>
           </div>
-          <div class="get-in-touch">
-            <p>
-              If any of These descriptions sounds like you, please get in touch
-            </p>
-            <a href=""><p class="button">GET IN TOUCH</p></a>
-          </div>
         </section>
+        <div class="get-in-touch">
+          <p>
+            If any of These descriptions sounds like you, please get in touch
+          </p>
+          <a href=""><p class="button">GET IN TOUCH</p></a>
+        </div>
+
         <section class="tourguides">
           <h4>Meet Our Passonate Tourguides</h4>
           <div class="image-wrapper">
@@ -267,78 +285,77 @@
             </section>
           </div>
         </div>
-      </div>
-    </main>
-
-    <footer>
-      <div class="footer-wrapper">
-        <div class="footer-container">
-          <h6>CONNECT:</h6>
-          <ul class="connect">
-            <li>
-              <a href="www.facebook.com"
-                ><span class="fa fa-facebook-f"></span
-              ></a>
-            </li>
-            <li>
-              <a href="www.instagram.com"
-                ><span class="fa fa-instagram"></span
-              ></a>
-            </li>
-            <li>
-              <a href="www.youtube.com"><span class="fa fa-youtube"></span></a>
-            </li>
-            <li>
-              <a href="www.twitter.com"><span class="fa fa-twitter"></span></a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer-container">
-          <h6>HOURS:</h6>
-          <div class="hours-wrapper">
-            <ul class="hours">
-              <li>Monday:</li>
-              <li>Tuesday:</li>
-              <li>Wednesday:</li>
-              <li>Thursday:</li>
-              <li>Friday:</li>
-              <li>Saturday:</li>
-              <li>Sunday:</li>
+      </main>
+  
+      <footer>
+        <div class="footer-wrapper">
+          <div class="footer-container">
+            <h6>CONNECT:</h6>
+            <ul class="connect">
+              <li>
+                <a href="www.facebook.com"
+                  ><span class="fa fa-facebook-f"></span
+                ></a>
+              </li>
+              <li>
+                <a href="www.instagram.com"
+                  ><span class="fa fa-instagram"></span
+                ></a>
+              </li>
+              <li>
+                <a href="www.youtube.com"><span class="fa fa-youtube"></span></a>
+              </li>
+              <li>
+                <a href="www.twitter.com"><span class="fa fa-twitter"></span></a>
+              </li>
             </ul>
-            <ul>
-              <li>Closed</li>
-              <li>10:00 - 16:00</li>
-              <li>10:00 - 16:00</li>
-              <li>10:00 - 16:00</li>
-              <li>10:00 - 19:00</li>
-              <li>09:00 - 16:00</li>
-              <li>09:00 - 13:00</li>
+          </div>
+          <div class="footer-container">
+            <h6>HOURS:</h6>
+            <div class="hours-wrapper">
+              <ul class="hours">
+                <li>Monday:</li>
+                <li>Tuesday:</li>
+                <li>Wednesday:</li>
+                <li>Thursday:</li>
+                <li>Friday:</li>
+                <li>Saturday:</li>
+                <li>Sunday:</li>
+              </ul>
+              <ul>
+                <li>Closed</li>
+                <li>10:00 - 16:00</li>
+                <li>10:00 - 16:00</li>
+                <li>10:00 - 16:00</li>
+                <li>10:00 - 19:00</li>
+                <li>09:00 - 16:00</li>
+                <li>09:00 - 13:00</li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer-container">
+            <div>
+              <h6>LOCATION:</h6>
+              <p>Nygårdsgaten 112</p>
+              <p>5008 Bergen, Norway</p>
+            </div>
+            <a href="visit.html" class="location"
+              ><span class="fa fa-map-marker-alt"></span>
+              <p>Getting Here</p></a
+            >
+          </div>
+          <div class="footer-container">
+            <h6>CONTACT & SUPPORT:</h6>
+            <ul class="contact">
+              <li><a href="about_us.html">About Us</a></li>
+              <li><a href="visit.html">Facilities</a></li>
+              <li><a href="contact.html">Contact & FAQ</a></li>
+              <li><p>Email: contact@cms.com</p></li>
+              <li><p>Phone: 500 55 555</p></li>
             </ul>
           </div>
         </div>
-        <div class="footer-container">
-          <div>
-            <h6>LOCATION:</h6>
-            <p>Nygårdsgaten 112</p>
-            <p>5008 Bergen, Norway</p>
-          </div>
-          <a href="visit.html" class="location"
-            ><span class="fa fa-map-marker-alt"></span>
-            <p>Getting Here</p></a
-          >
-        </div>
-        <div class="footer-container">
-          <h6>CONTACT & SUPPORT:</h6>
-          <ul class="contact">
-            <li><a href="about_us.html">About Us</a></li>
-            <li><a href="visit.html">Facilities</a></li>
-            <li><a href="contact.html">Contact & FAQ</a></li>
-            <li><p>Email: contact@cms.com</p></li>
-            <li><p>Phone: 500 55 555</p></li>
-          </ul>
-        </div>
-      </div>
-      <p id="copyright">Community Science Museum 2020</p>
-    </footer>
+        <p id="copyright">Community Science Museum 2020</p>
+      </footer>
   </body>
 </html>
