--- a/index.html
+++ b/index.html
@@ -119,44 +119,56 @@
         </ul>
         <ul class="large-screen">
           <li>
-            <a href="exhibitions.html">EXHIBITIONS</a>
+            <a href="exhibitions.html" class="purple-box inactive"
+              >EXHIBITIONS</a
+            >
+            <div class="dropdown-info">
+              <p class="header">Our Exhibition Spaces Include:</p>
+              <p>
+                Cosmology, Evolution, Biology & Medicine, Robotics & AI and
+                Ecology
+              </p>
+              <p>Learn More...</p>
+            </div>
           </li>
 
-          <!-- <ul class="dropdown">
-            <p>Our Exhibition Spaces Include:</p>
-            <li>Cosmology</li>
-            <li>Evolution</li>
-            <li>Biology & Medicine</li>
-            <li>Robotics & AI</li>
-            <li>Ecology</li>
-          </ul> -->
-          <li><a href="explore.html">EXPLORE</a></li>
-          <!-- <ul class="dropdown">
-            <p>Learn more about what have on offer, wheter you are a:</p>
-            <li>Kid</li>
-            <li>Parent</li>
-            <li>Teacher</li>
-            <li>Researcher</li>
-          </ul> -->
           <li>
-            <a href="get_involved.html">GET INVOLVED</a>
+            <a href="explore.html" class="purple-box inactive">EXPLORE</a>
+            <div class="dropdown-info">
+              <p class="header">Our Exhibition Spaces Include:</p>
+              <p>
+                Cosmology, Evolution, Biology & Medicine, Robotics & AI and
+                Ecology
+              </p>
+              <p>Learn More...</p>
+            </div>
           </li>
-          <!-- <ul class="dropdown">
-            <p>Do you want to support the museum?:</p>
-            <li>Donations</li>
-            <li>Volunteering</li>
-            <li>Internships</li>
-          </ul> -->
-          <li><a href="visit.html">VISIT</a></li>
-          <!-- <ul class="dropdown">
-            <p>Information about:</p>
-            <li>Admission</li>
-            <li>Location</li>
-            <li>Hours</li>
-            <li>Accessibility</li>
-            <li>Food and Drink</li>
-            <li>Shop</li>
-          </ul> -->
+
+          <li>
+            <a href="get_involved.html" class="purple-box inactive"
+              >GET INVOLVED</a
+            >
+            <div class="dropdown-info">
+              <p class="header">Our Exhibition Spaces Include:</p>
+              <p>
+                Cosmology, Evolution, Biology & Medicine, Robotics & AI and
+                Ecology
+              </p>
+              <p>Learn More...</p>
+            </div>
+          </li>
+
+          <li>
+            <a href="visit.html" class="purple-box inactive">VISIT</a>
+            <div class="dropdown-info">
+              <p class="header">Our Exhibition Spaces Include:</p>
+              <p>
+                Cosmology, Evolution, Biology & Medicine, Robotics & AI and
+                Ecology
+              </p>
+              <p>Learn More...</p>
+            </div>
+          </li>
         </ul>
       </nav>
     </header>
@@ -275,12 +287,13 @@
           <div class="image-wrapper">
             <figure class="clubs">
               <a href="explore.html"><img src="images\club_1.jpg" alt="" /></a>
+              <figcaption>The Young Stars Club</figcaption>
             </figure>
-            <figcaption>The Young Stars Club</figcaption>
+
             <figure class="clubs">
               <a href="explore.html"><img src="images\club_2.jpg" alt="" /></a>
+              <figcaption>The Holiday Club</figcaption>
             </figure>
-            <figcaption>The Holiday Club</figcaption>
           </div>
           <p>Click Images to Learn More</p>
         </section>
