--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <div class="bubble">
               <div class="arrow-up"></div>
               <a href="about_us.html">
-                <h3>"Let us Explore Together"</h3>
+                <h3>Let us Explore Together</h3>
                 <div id="about">
                   <p>Learn more ABOUT US and our VISON</p>
                   <span class="fa fa-arrow-circle-right"></span>
@@ -257,19 +257,72 @@
       <div class="secondary-container">
         <section class="news">
           <h4>NEWS: Special Events & Exhibitions</h4>
+
+          <label class="aerodynamics-label" for="aerodynamics">
+            <span class="fa fa-angle-left"></span>
+          </label>
+          <input type="checkbox" id="aerodynamics" />
+          <div class="aerodynamics-wrapper">
+            <figure class="news">
+              <img src="images\aeronautic.jpg" alt="" class="mobile" />
+              <img src="images\aeronautic.jpg" alt="" class="large-screen" />
+            </figure>
+            <div class="circle-wrapper">
+              <div class="selected"></div>
+              <div></div>
+              <div></div>
+            </div>
+            <div class="news">
+              <h5>Visiting Professor Of Aeronautics</h5>
+              <p>
+                It is our pleasure to announce that Professor Sheila Widnall
+                from the Massachusetts Institue of Technology will be delivering
+                2 lectures on the development of aeronautics and where the
+                future lies in this exciting space.
+              </p>
+            </div>
+          </div>
+
+          <label class="energica-label" for="energica">
+            <span class="fa fa-angle-right"></span>
+          </label>
+          <input type="checkbox" id="energica" />
+          <div class="energica-wrapper">
+            <figure class="news">
+              <img src="images\energica.jpg" alt="" class="mobile" />
+              <img src="images\energica.jpg" alt="" class="large-screen" />
+            </figure>
+            <div class="circle-wrapper">
+              <div></div>
+              <div></div>
+              <div class="selected"></div>
+            </div>
+            <div class="news">
+              <h5>Energica Exhibition</h5>
+              <p>
+                On loan from the NEMO Science Museum in Amsterdam, the
+                Energetica exhibition is coming to the Community Science Museum.
+              </p>
+              <p>
+                It’s a series of installations that allow visitors to experience
+                the power of the elements as we harness them. From solar energy
+                powering lighting, to ‘Wind Island’ that shows how turbines are
+                able to use and control wind to create power.
+              </p>
+            </div>
+          </div>
+
           <div class="news-wrapper">
-            <figure class="news item-1">
+            <figure class="news">
               <img src="images\t-rex.jpg" alt="" class="mobile" />
               <img src="images\t-rex_large.jpg" alt="" class="large-screen" />
             </figure>
-            <div class="angle-wrapper">
-              <span class="fa fa-angle-left angle"></span>
+            <div class="circle-wrapper">
               <div></div>
+              <div class="selected"></div>
               <div></div>
-              <div></div>
-              <span class="fa fa-angle-right angle"></span>
             </div>
-            <div class="news item-2">
+            <div class="news">
               <h5>Night in the Museum</h5>
               <p>
                 Get your family together for an exciting night in the museum as
@@ -282,6 +335,7 @@
             </div>
           </div>
         </section>
+
         <section class="clubs">
           <h4 id="clubs">Join One of Our Children Clubs</h4>
           <div class="image-wrapper">
