updates to carousel

--- a/index.html
+++ b/index.html
@@ -258,11 +258,11 @@
         <section class="news">
           <h4>NEWS: Special Events & Exhibitions</h4>
 
-          <label class="aerodynamics-label" for="aerodynamics">
+          <label class="aeronautic-label" for="aeronautic">
             <span class="fa fa-angle-left"></span>
           </label>
-          <input type="checkbox" id="aerodynamics" />
-          <div class="aerodynamics-wrapper">
+          <input type="checkbox" id="aeronautic" />
+          <div class="aeronautic-wrapper">
             <figure class="news">
               <img src="images\aeronautic.jpg" alt="" class="mobile" />
               <img src="images\aeronautic.jpg" alt="" class="large-screen" />
@@ -315,7 +315,7 @@
           <div class="news-wrapper">
             <figure class="news">
               <img src="images\t-rex.jpg" alt="" class="mobile" />
-              <img src="images\t-rex_large.jpg" alt="" class="large-screen" />
+              <img src="images\t-rex.jpg" alt="" class="large-screen" />
             </figure>
             <div class="circle-wrapper">
               <div></div>
