updates to about page

--- a/about_us.html
+++ b/about_us.html
@@ -179,13 +179,14 @@
         <section class="vision">
           <div class="vision item-1">
             <p>
-              "Come join us at the Community Science Museum where we’re
-              committed to making science accessible to all"
+              Come join us at the Community Science Museum where we’re
+              committed to making science accessible to all
             </p>
           </div>
-          <div class="image item-2">
-            <img src="images\together.jpg" alt="" />
-          </div>
+          <figure class="vision item-2">
+            <img class="mobile" src="images\together.jpg" alt="" />
+            <img class="large-screen" src="images\together_large.jpg" alt="" />
+          </figure>
           <div class="vision item-3">
             <h5>Science should be Fun</h5>
             <p>
