Mobile pages tuned

--- a/contact.html
+++ b/contact.html
@@ -177,11 +177,14 @@
       <div class="main-wrapper">
         <h1>Contact & FAQ</h1>
         <section class="contact">
-          <p>
-            Please submit your inquiry, and we will get in touch, as soon as
-            possible.
-          </p>
-          <p>Please also see our FAQ before submitting a question.</p>
+          <p>If you need to get in touch with us, Please use this form:</p>
+          <ul class="contact">
+            <li>
+              Submit your inquiry, and we will get back to you as soon as
+              possible.
+            </li>
+            <li>Please also see our FAQ before submitting a question.</li>
+          </ul>
           <form action="" method="GET">
             <label for="name" class="label">Name</label>
             <input
