--- a/exhibitions.html
+++ b/exhibitions.html
@@ -222,8 +222,7 @@
               </p>
               <p>
                 Discover the origins of life on this planet and how the species
-                we know today have evolved our time. You can also take some time
-                to meet a few of the creatures who didn’t survive, including our
+                we know today have evolved our time. You can also meet a few of the creatures who didn’t survive, including our
                 Woolly Mammoth, the Dodos, and a number of dinosaurs too.
               </p>
               </div>
