--- a/get_involved.html
+++ b/get_involved.html
@@ -223,7 +223,7 @@
           </div>
         </section>
         <div class="get-in-touch">
-          <p>Do you want to help us out? please get in touch</p>
+          <p>Do you want to help us out?</p>
           <a href=""><p class="button">GET IN TOUCH</p></a>
         </div>
 
