--- a/index.html
+++ b/index.html
@@ -340,13 +340,17 @@
           <h4 id="clubs">Join One of Our Children Clubs</h4>
           <div class="image-wrapper">
             <figure class="clubs">
-              <a href="explore.html"><img src="images\club_1.jpg" alt="" /></a>
-              <figcaption>The Young Stars Club</figcaption>
+              <a href="explore.html"
+                ><img src="images\club_1.jpg" alt="" />
+                <figcaption class="clubs">The Young Stars Club</figcaption></a
+              >
             </figure>
 
             <figure class="clubs">
-              <a href="explore.html"><img src="images\club_2.jpg" alt="" /></a>
-              <figcaption>The Holiday Club</figcaption>
+              <a href="explore.html"
+                ><img src="images\club_2.jpg" alt="" />
+                <figcaption class="clubs">The Holiday Club</figcaption></a
+              >
             </figure>
           </div>
           <p>Click Images to Learn More</p>
