--- a/visit.html
+++ b/visit.html
@@ -180,10 +180,10 @@
         <section class="info">
           <div class="info">
             <h2>Admission</h2>
-            <p>The entrance is free for all.</p>
+            <p><strong>The entrance is free for all.</strong></p>
             <p>
               There are guided tours of the museum that leave every hour. These
-              tours are 70 NOK per person and include a handy printed guide of
+              tours are <em>70 NOK per person</em> and include a handy printed guide of
               the museum.
             </p>
             <p>
@@ -191,7 +191,7 @@
               more people, please contact us to arrange the tour.
             </p>
             <p>
-              Tickets may be bought through Our partnership With Ticketmaster,
+              Tickets may be bought through Our partnership with Ticketmaster,
               or at the site.
             </p>
           </div>
